--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@edgestore/react": "^0.2.2",
     "@edgestore/server": "^0.2.2",
+    "@google-cloud/translate": "^8.5.0",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
