--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.2",
     "react-pdf": "^9.1.1",
+    "react-resizable-panels": "^2.1.7",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.15",
