--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.2",
+    "react-markdown": "^10.1.0",
     "react-pdf": "^9.1.1",
     "react-resizable-panels": "^2.1.7",
     "sonner": "^1.7.0",
